Refresh Token implementation
Signed-off-by: kumarsai131 <kumarsai131@gmail.com>

--- a/UI/src/index.scss
+++ b/UI/src/index.scss
@@ -71,6 +71,10 @@ body {
     cursor: pointer;
   }
 
+  .cursor-pointer {
+    cursor: pointer;
+  }
+
   .cartProduct {
     border: 1px solid $accent;
   }
